--- a/HiPDA/acknowledgement.html
+++ b/HiPDA/acknowledgement.html
@@ -29,10 +29,12 @@
 <li><a href="#ZAActivityBar">ZAActivityBar</a></li>
 <li><a href="#SWRevealViewController">SWRevealViewController</a></li>
 <li><a href="#IDMPhotoBrowser">IDMPhotoBrowser</a></li>
+<li><a href="#CTAssetsPickerController">CTAssetsPickerController</a></li>
 <li><a href="#UI7Kit">UI7Kit</a></li>
 <li><a href="#EGOCache">EGOCache</a></li>
 <li><a href="#DZWebBrowser">DZWebBrowser</a></li>
-<li><a href="#MessagesTableViewController">MessagesTableViewController</a></li>
+<li><a href="#JSQMessagesViewController">JSQMessagesViewController</a></li>
+<li><a href="#SloppySwiper">SloppySwiper</a></li>
 <li><a href="#RETableViewManager">RETableViewManager</a></li>
 <li><a href="#KNSemiModalViewController">KNSemiModalViewController</a></li>
 <li><a href="#Reachability">Reachability</a></li>
@@ -222,6 +224,19 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
 </code> 
 
+<p ><a name=CTAssetsPickerController href=https://github.com/chiunam/CTAssetsPickerController/>CTAssetsPickerController</a></p>
+<code>
+The MIT License (MIT)
+
+Copyright (c) 2013 Clement CN Tsang
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+</code>
+
 <p ><a name=UI7Kit href=https://github.com/youknowone/UI7Kit/>UI7Kit</a></p>
 <code>
 Copyright (c) 2013, Jeong YunWon <jeong+ui7kit@youknowone.org>
@@ -277,18 +292,46 @@ The above copyright notice and this permission notice shall be included in all c
 THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </code> 
 
-<p ><a name=MessagesTableViewController href=https://github.com/jessesquires/MessagesTableViewController/>MessagesTableViewController</a></p>
+<p ><a name=JSQMessagesViewController href=https://github.com/jessesquires/JSQMessagesViewController/>JSQMessagesViewController</a></p>
 <code>
-You are free to use this as you please. No attribution necessary, but much appreciated.
 
-Copyright © 2013 Jesse Squires
-
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+MIT License
+Copyright (c) 2014 Jesse Squires
+http://www.hexedbits.com
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
+associated documentation files (the "Software"), to deal in the Software without restriction, including
+without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the
+following conditions:
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT
+LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
+IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE
+OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 </code> 
+
+<p ><a name=SloppySwiper href=https://github.com/fastred/SloppySwiper/>SloppySwiper</a></p>
+<code>
+The MIT License (MIT)
+Copyright (c) 2014 Arkadiusz Holko <fastred@fastred.org>
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+</code>
 
 <p ><a name=RETableViewManager href=https://github.com/romaonthego/RETableViewManager>RETableViewManager</a></p>
 <code>
